--- a/assignments/assignment1.ipynb
+++ b/assignments/assignment1.ipynb
@@ -649,20 +649,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ceb3532-8cf2-4a42-8dff-a918f0503ec0",
-   "metadata": {},
-   "source": [
-    "_Answer_:\n",
-    "\n",
-    "    From K-mean clustering, the variation of cluster stability changes from clusters 8 onwards, in which it switches from wider interval to a narrower one. From this, we conclude that clusters from 0 to about 8 exhibit much greater variability in stability than the others. It is worth noting the jump in stability at k = 10 to 11. Additionally, It is worth mentioning that the stability of the models is generally high from k=2, max at clusters of about 20. \n",
-    "    \n",
-    "    For internal metrics, because the earliest clusters (from cluster 0 to cluster 8) shows substantial variability, I will investigate clusters 9-19 to determine which is best based on the metrics. \n",
-    "      - For CH, clusters 9.\n",
-    "      - For DB, cluster 14."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d7c59304-05a8-49c5-8ff3-885ef1040d02",
    "metadata": {},
    "source": [
@@ -757,49 +743,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 211,
-   "id": "98434216-f18e-4139-924e-1b0413f375e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 211,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ks[np.where(np.array(stability_scores) == max(stability_scores))[0][0]"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "d2ea1538-24ec-4fb3-8ce8-2148d5bf6149",
+   "id": "38c18b86-19c2-4d1c-b4b8-dc024e6b498e",
    "metadata": {},
    "source": [
-    "__Answer__:\n",
+    "Answer:\n",
     "\n",
-    "__K-mean clustering__\n",
+    "K-mean clustering\n",
     "\n",
-    "    For this clustering, the variation of cluster stability changes from clusters 8 onwards, in which it switches from wider interval to a narrower one. From this, we conclude that clusters from 0 to about 8 exhibit much greater variability in stability than the others. It is worth noting the jump in stability at k = 10 to 11. Additionally, It is worth mentioning that the stability of the models is generally high from k=2, max at clusters of about 20. From the plot of the stability curve, the best `k` is between `14` to `16`, reason been this clusters plateu, but no clear k outperform the other. So, for k mean clustering the no. of clusters equal to the number of tissues of origin in our data. \n",
+    "For this clustering, the variation of cluster stability changes from clusters 8 onwards, in which it switches from wider interval to a narrower one. From this, we conclude that clusters from 0 to about 8 exhibit much greater variability in stability than the others. It is worth noting the jump in stability at k = 10 to 11. Additionally, It is worth mentioning that the stability of the models is generally high from k=2, max at clusters of about 20. From the plot of the stability curve, the best `k` is between `14` to `16`, reason been this clusters plateu, but no clear k outperform the other. So, for k mean clustering the no. of clusters equal to the number of tissues of origin in our data. \n",
+    "Spectral clustering\n",
     "\n",
+    "For the spectral clustering, best on the ARI score, the optimal `k` is `14`. \n",
+    "Conclusion\n",
     "\n",
-    "__Spectral clustering__\n",
-    "\n",
-    "    For the spectral clustering, best on the ARI score, the optimal `k` is `14`. \n",
-    "\n",
-    "\n",
-    "__Conclusion__\n",
-    "\n",
-    "    Based on the ARI score, the picked `k` range between `12` to `16`, thus not simillar to the number of tissue of origin (`10`) in our dataset. \n",
-    "\n",
-    "\n",
-    "    "
+    "Based on the ARI score, the picked `k` range between `12` to `16`, thus not simillar to the number of tissue of origin (`10`) in our dataset. "
    ]
   },
   {
@@ -810,7 +768,7 @@
     "## 3. Cluster Evaluation and Interpretation\n",
     "\n",
     "\n",
-    "__Using external metrics, assess how well the clustering solutions match the true labels/targets (tissue of origin).__\n"
+    "__Using external metrics, assess how well the clustering solutions match the true labels/targets (tissue of origin).___\n"
    ]
   },
   {
@@ -1654,7 +1612,9 @@
    "source": [
     "__Explanation__\n",
     "\n",
-    "The first"
+    "The top gene (ENSG00000157110.15), its function is RNA binding protein, and based on the [bgee website](https://www.bgee.org/), the expression is heterogenous across tissues.  The second top feature `ENSG00000223802.7` is highly related to brain development. \n",
+    "\n",
+    "Since RNA-binding protein is important in all tissues, it will make sense why it's the top gene that drives clustering. Although the second top gene show specialization towards brain development.\n"
    ]
   },
   {
@@ -1776,14 +1736,6 @@
     "\n",
     "From this three top genes, we se from [bgee.org](www.bgee.org) website the corresponding anatomical entities with  highest expression scores are related to the tissue. Thus it suggest the lasso regularization was able to select genes able to distingish the tissues from others."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5dcf9ec9-e98c-4b1c-9c09-8403456812dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
