--- a/assignments/assignment1.ipynb
+++ b/assignments/assignment1.ipynb
@@ -747,17 +747,19 @@
    "id": "38c18b86-19c2-4d1c-b4b8-dc024e6b498e",
    "metadata": {},
    "source": [
-    "Answer:\n",
+    "__Answer__:\n",
     "\n",
-    "K-mean clustering\n",
+    "__K-mean clustering__\n",
     "\n",
     "For this clustering, the variation of cluster stability changes from clusters 8 onwards, in which it switches from wider interval to a narrower one. From this, we conclude that clusters from 0 to about 8 exhibit much greater variability in stability than the others. It is worth noting the jump in stability at k = 10 to 11. Additionally, It is worth mentioning that the stability of the models is generally high from k=2, max at clusters of about 20. From the plot of the stability curve, the best `k` is between `14` to `16`, reason been this clusters plateu, but no clear k outperform the other. So, for k mean clustering the no. of clusters equal to the number of tissues of origin in our data. \n",
-    "Spectral clustering\n",
+    "\n",
+    "__Spectral clustering__\n",
     "\n",
     "For the spectral clustering, best on the ARI score, the optimal `k` is `14`. \n",
-    "Conclusion\n",
     "\n",
-    "Based on the ARI score, the picked `k` range between `12` to `16`, thus not simillar to the number of tissue of origin (`10`) in our dataset. "
+    "__Conclusion__\n",
+    "\n",
+    "Based on the ARI score, the picked `k` range between `12` to `16`, thus not similar to the number of tissue of origin (`10`) in our dataset. "
    ]
   },
   {
